# latex-validator

./: README.md  pyproject.toml  test.py
latex_validator/: __init__.py  cli.py  validate.py
src/latex_validator/: __init__.py
