[project]
name = "latex-validator"
version = "1.0.0"
description = "A Python package to validate LaTeX expressions, usable as a CLI tool or library."
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "pylatexenc>=2.10"
]

[project.scripts]
latex-validator = "latex_validator.cli:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
